[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Pixellari.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://audio/sounds/UI/selected2.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sounds/UI/select.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/background/middle ages.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="SettingsMenu" type="Control"]
light_mask = 0
anchor_left = 0.00123873
anchor_right = 1.00124
anchor_bottom = 1.0
margin_left = 0.564865
margin_right = 0.56485
focus_mode = 2
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -331.5, -28 )
texture = ExtResource( 5 )

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 144.391
margin_top = 100.177
margin_right = 344.391
margin_bottom = 260.177
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overall" type="HBoxContainer" parent="Buttons"]
margin_right = 200.0
margin_bottom = 16.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Buttons/Overall"]
margin_right = 43.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "Sound"

[node name="Overall" type="HSlider" parent="Buttons/Overall"]
margin_left = 53.0
margin_right = 200.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../../BackButton")
focus_neighbour_bottom = NodePath("../../Music/Music")
focus_next = NodePath("../../Music/Music")
focus_previous = NodePath("../../BackButton")
focus_mode = 1
size_flags_horizontal = 3
max_value = 1.2

[node name="Music" type="HBoxContainer" parent="Buttons"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_constants/separation = 13

[node name="Label" type="Label" parent="Buttons/Music"]
margin_right = 40.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 4 )
text = "Music"

[node name="Music" type="HSlider" parent="Buttons/Music"]
margin_left = 53.0
margin_right = 200.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../../Overall/Overall")
focus_neighbour_bottom = NodePath("../../Audio/Audio")
focus_next = NodePath("../../Audio/Audio")
focus_previous = NodePath("../../Overall/Overall")
focus_mode = 1
size_flags_horizontal = 3
max_value = 1.2

[node name="Audio" type="HBoxContainer" parent="Buttons"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 68.0
size_flags_horizontal = 3
custom_constants/separation = 14
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/Audio"]
margin_right = 39.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 5 )
text = "Audio"

[node name="Audio" type="HSlider" parent="Buttons/Audio"]
margin_left = 53.0
margin_right = 200.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../../Music/Music")
focus_neighbour_bottom = NodePath("../../BackButton")
focus_next = NodePath("../../BackButton")
focus_previous = NodePath("../../Music/Music")
focus_mode = 1
size_flags_horizontal = 3
max_value = 1.2

[node name="BackButton" type="Button" parent="Buttons"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 104.0
focus_neighbour_top = NodePath("../Audio/Audio")
focus_neighbour_bottom = NodePath("../Overall/Overall")
focus_next = NodePath("../Overall/Overall")
focus_previous = NodePath("../Audio/Audio")
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="SelectedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sounds"

[node name="Title" type="Label" parent="."]
margin_left = 106.794
margin_top = 38.6812
margin_right = 385.794
margin_bottom = 86.6812
custom_fonts/font = SubResource( 1 )
text = "SETTINGS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="Buttons/Overall/Overall" to="." method="_on_Button_focus_entered"]
[connection signal="focus_entered" from="Buttons/Music/Music" to="." method="_on_Button_focus_entered"]
[connection signal="focus_entered" from="Buttons/Audio/Audio" to="." method="_on_Button_focus_entered"]
[connection signal="focus_entered" from="Buttons/BackButton" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="Buttons/BackButton" to="." method="_on_BackButton_pressed"]
